# moviepicker

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: deploy.yml
frontend/: .env  .env.production  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Login.css
frontend/src/components/: GoogleSignInButton.js  MatchOverlay.js  PinGenerated.js  PostMatchOptions.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useGoogleAuth.js
frontend/src/pages/: CreateSession.js  Home.js  JoinGroup.js  Login.js  Matches.js  Signup.js  SwipingScreen.js
frontend/src/styles/: colours.css  create-session.css  home.css  join-group.css  match-overlay.css  pin-generated.css  styles.css  swiping.css
moviepicker/: __init__.py
moviepicker/models/: session.py
moviepicker/models/adrs/: 001-event-driven-arch.md  002-databases.md  003-matching-ui-components.md  004-session-creation-architecture.md  005-navigation-flow-restructuring.md  006-google-authentication-only.md  007-swiping-screen-architecture.md  008-S3-for-hosting-frontend.md  009-websocket-for-realtime.md  010-lambda-sns.md
moviepicker/models/tmdb_api/: __init__.py  api_enums.py  tmdb_client.py
moviepicker/tests/: __init__.py  test_tmdbclient.py
moviepicker/utils/connect_handler/: lambda_function.py
moviepicker/utils/emit_movie_match/: invoke_lambda.py  (+1 more)
moviepicker/views/: routes.py
terraform/: .terraform.lock.hcl  db.tf  deploy.sh  deploy_frontend.sh  ecs.tf  frontend.tf  frontend_url.txt  lambda.tf  lb.tf  main.tf  websocket.txt
(+1 files in other folders)
